--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="aboutus__box">
 						<div class="aboutus__box--img">
 							<img
-								src="/dist/img/water_small.jpg"
+								src="./dist/img/water_small.jpg"
 								alt="Jezioro otoczone zielonym lasem. Na środku jeziora wystająca skała z której wyrasta krzak"
 							/>
 						</div>
@@ -228,6 +228,6 @@
 				once: true,
 			});
 		</script>
-		<script src="/dist/js/script.min.js"></script>
+		<script src="./dist/js/script.min.js"></script>
 	</body>
 </html>
