--- a/oferty.html
+++ b/oferty.html
@@ -65,7 +65,7 @@
 				<div class="mySlides fade">
 					<div class="numbertext">1 / 4</div>
 					<img
-						src="/dist/img/offerA.jpg"
+						src="./dist/img/offerA.jpg"
 						style="width: 100%"
 						alt="Park jesienną porą. Drewniany most przysypany liścmi pod którym płynie rzeka."
 					/>
@@ -83,7 +83,7 @@
 				<div class="mySlides fade">
 					<div class="numbertext">2 / 4</div>
 					<img
-						src="/dist/img/offerB.jpg"
+						src="./dist/img/offerB.jpg"
 						style="width: 100%"
 						alt="Drewniana chatka w środku iglastego lasu."
 					/>
@@ -101,7 +101,7 @@
 				<div class="mySlides fade">
 					<div class="numbertext">3 / 4</div>
 					<img
-						src="/dist/img/offerC.jpg"
+						src="./dist/img/offerC.jpg"
 						style="width: 100%"
 						alt="Drewniany domek przy drodze prowadzącej w głąb iglastego lasu."
 					/>
@@ -120,7 +120,7 @@
 				<div class="mySlides fade">
 					<div class="numbertext">4 / 4</div>
 					<img
-						src="/dist/img/offerD.jpg"
+						src="./dist/img/offerD.jpg"
 						style="width: 100%"
 						alt="Asfaltowa droga wzdłuż której biegnie las. W lesie i na drzewach leży śnieg."
 					/>
@@ -184,7 +184,7 @@
 	</div>
 </footer>
 
-		<script src="/dist/js/slideshow.min.js"></script>
-		<script src="/dist/js/script.min.js"></script>
+		<script src="./dist/js/slideshow.min.js"></script>
+		<script src="./dist/js/script.min.js"></script>
 	</body>
 </html>
