--- a/kontakt.html
+++ b/kontakt.html
@@ -144,6 +144,6 @@
 	</div>
 </footer>
 
-		<script src="/dist/js/script.min.js"></script>
+		<script src="./dist/js/script.min.js"></script>
 	</body>
 </html>
