start working plz

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 			crossorigin="anonymous"
 		></script>
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-		<link rel="stylesheet" href="./dist/css/style.min.css" />
+		<link rel="stylesheet" href="/dist/css/style.min.css" />
 	</head>
 	<body class="main-page">
 		<header>
 			<nav class="nav-desktop nav-sticky wrapper">
 	<div class="logo"><i class="fa-solid fa-tree"></i>Forest</div>
 	<div class="nav__list--desktop">
-		<a href="index.html#home" class="nav__link--desktop">Home</a>
-		<a href="index.html#aboutus" class="nav__link--desktop">O nas</a>
-		<a href="index.html#offer" class="nav__link--desktop nav__link--last"
+		<a href="/index.html#home" class="nav__link--desktop">Home</a>
+		<a href="/index.html#aboutus" class="nav__link--desktop">O nas</a>
+		<a href="/index.html#offer" class="nav__link--desktop nav__link--last"
 			>Oferta</a
 		>
-		<a href="kontakt.html" class="nav__link--desktop">Kontakt</a>
+		<a href="/kontakt.html" class="nav__link--desktop">Kontakt</a>
 	</div>
 </nav>
 <nav class="nav-mobile nav-sticky">
@@ -41,16 +41,16 @@
 		<button class="nav__button"><i class="fa-solid fa-bars"></i></button>
 		<div class="logo"><i class="fa-solid fa-tree"></i>Forest</div>
 		<div class="nav__list--mobile">
-			<a href="index.html#home" class="nav__link--mobile" onclick="void(0)"
+			<a href="/index.html#home" class="nav__link--mobile" onclick="void(0)"
 				>Home</a
 			>
-			<a href="index.html#aboutus" class="nav__link--mobile" onclick="void(0)"
+			<a href="/index.html#aboutus" class="nav__link--mobile" onclick="void(0)"
 				>O nas</a
 			>
-			<a href="index.html#offer" class="nav__link--mobile" onclick="void(0)"
+			<a href="/index.html#offer" class="nav__link--mobile" onclick="void(0)"
 				>Oferta</a
 			>
-			<a href="kontakt.html" class="nav__link--mobile" onclick="void(0)"
+			<a href="/kontakt.html" class="nav__link--mobile" onclick="void(0)"
 				>Kontakt</a
 			>
 		</div>
@@ -75,7 +75,7 @@
 					<div class="aboutus__box">
 						<div class="aboutus__box--img">
 							<img
-								src="./dist/img/water_small.jpg"
+								src="/dist/img/water_small.jpg"
 								alt="Jezioro otoczone zielonym lasem. Na środku jeziora wystająca skała z której wyrasta krzak"
 							/>
 						</div>
@@ -228,6 +228,6 @@
 				once: true,
 			});
 		</script>
-		<script src="./dist/js/script.min.js"></script>
+		<script src="/dist/js/script.min.js"></script>
 	</body>
 </html>
