--- a/kontakt.html
+++ b/kontakt.html
@@ -20,20 +20,20 @@
 			src="https://kit.fontawesome.com/b87b86af08.js"
 			crossorigin="anonymous"
 		></script>
-		<link rel="stylesheet" href="./dist/css/style.min.css" />
-		<link rel="stylesheet" href="./dist/css/contact.min.css" />
+		<link rel="stylesheet" href="/dist/css/style.min.css" />
+		<link rel="stylesheet" href="/dist/css/contact.min.css" />
 	</head>
 	<body>
 		<header>
 			<nav class="nav-desktop nav-sticky wrapper">
 	<div class="logo"><i class="fa-solid fa-tree"></i>Forest</div>
 	<div class="nav__list--desktop">
-		<a href="index.html#home" class="nav__link--desktop">Home</a>
-		<a href="index.html#aboutus" class="nav__link--desktop">O nas</a>
-		<a href="index.html#offer" class="nav__link--desktop nav__link--last"
+		<a href="/index.html#home" class="nav__link--desktop">Home</a>
+		<a href="/index.html#aboutus" class="nav__link--desktop">O nas</a>
+		<a href="/index.html#offer" class="nav__link--desktop nav__link--last"
 			>Oferta</a
 		>
-		<a href="kontakt.html" class="nav__link--desktop">Kontakt</a>
+		<a href="/kontakt.html" class="nav__link--desktop">Kontakt</a>
 	</div>
 </nav>
 <nav class="nav-mobile nav-sticky">
@@ -41,16 +41,16 @@
 		<button class="nav__button"><i class="fa-solid fa-bars"></i></button>
 		<div class="logo"><i class="fa-solid fa-tree"></i>Forest</div>
 		<div class="nav__list--mobile">
-			<a href="index.html#home" class="nav__link--mobile" onclick="void(0)"
+			<a href="/index.html#home" class="nav__link--mobile" onclick="void(0)"
 				>Home</a
 			>
-			<a href="index.html#aboutus" class="nav__link--mobile" onclick="void(0)"
+			<a href="/index.html#aboutus" class="nav__link--mobile" onclick="void(0)"
 				>O nas</a
 			>
-			<a href="index.html#offer" class="nav__link--mobile" onclick="void(0)"
+			<a href="/index.html#offer" class="nav__link--mobile" onclick="void(0)"
 				>Oferta</a
 			>
-			<a href="kontakt.html" class="nav__link--mobile" onclick="void(0)"
+			<a href="/kontakt.html" class="nav__link--mobile" onclick="void(0)"
 				>Kontakt</a
 			>
 		</div>
@@ -144,6 +144,6 @@
 	</div>
 </footer>
 
-		<script src="./dist/js/script.min.js"></script>
+		<script src="/dist/js/script.min.js"></script>
 	</body>
 </html>
