--- a/oferty.html
+++ b/oferty.html
@@ -20,19 +20,19 @@
 			src="https://kit.fontawesome.com/b87b86af08.js"
 			crossorigin="anonymous"
 		></script>
-		<link rel="stylesheet" href="./dist/css/style.min.css" />
+		<link rel="stylesheet" href="/dist/css/style.min.css" />
 	</head>
 	<body>
 		<header>
 			<nav class="nav-desktop nav-sticky wrapper">
 	<div class="logo"><i class="fa-solid fa-tree"></i>Forest</div>
 	<div class="nav__list--desktop">
-		<a href="index.html#home" class="nav__link--desktop">Home</a>
-		<a href="index.html#aboutus" class="nav__link--desktop">O nas</a>
-		<a href="index.html#offer" class="nav__link--desktop nav__link--last"
+		<a href="/index.html#home" class="nav__link--desktop">Home</a>
+		<a href="/index.html#aboutus" class="nav__link--desktop">O nas</a>
+		<a href="/index.html#offer" class="nav__link--desktop nav__link--last"
 			>Oferta</a
 		>
-		<a href="kontakt.html" class="nav__link--desktop">Kontakt</a>
+		<a href="/kontakt.html" class="nav__link--desktop">Kontakt</a>
 	</div>
 </nav>
 <nav class="nav-mobile nav-sticky">
@@ -40,16 +40,16 @@
 		<button class="nav__button"><i class="fa-solid fa-bars"></i></button>
 		<div class="logo"><i class="fa-solid fa-tree"></i>Forest</div>
 		<div class="nav__list--mobile">
-			<a href="index.html#home" class="nav__link--mobile" onclick="void(0)"
+			<a href="/index.html#home" class="nav__link--mobile" onclick="void(0)"
 				>Home</a
 			>
-			<a href="index.html#aboutus" class="nav__link--mobile" onclick="void(0)"
+			<a href="/index.html#aboutus" class="nav__link--mobile" onclick="void(0)"
 				>O nas</a
 			>
-			<a href="index.html#offer" class="nav__link--mobile" onclick="void(0)"
+			<a href="/index.html#offer" class="nav__link--mobile" onclick="void(0)"
 				>Oferta</a
 			>
-			<a href="kontakt.html" class="nav__link--mobile" onclick="void(0)"
+			<a href="/kontakt.html" class="nav__link--mobile" onclick="void(0)"
 				>Kontakt</a
 			>
 		</div>
@@ -65,7 +65,7 @@
 				<div class="mySlides fade">
 					<div class="numbertext">1 / 4</div>
 					<img
-						src="./dist/img/offerA.jpg"
+						src="/dist/img/offerA.jpg"
 						style="width: 100%"
 						alt="Park jesienną porą. Drewniany most przysypany liścmi pod którym płynie rzeka."
 					/>
@@ -83,7 +83,7 @@
 				<div class="mySlides fade">
 					<div class="numbertext">2 / 4</div>
 					<img
-						src="./dist/img/offerB.jpg"
+						src="/dist/img/offerB.jpg"
 						style="width: 100%"
 						alt="Drewniana chatka w środku iglastego lasu."
 					/>
@@ -101,7 +101,7 @@
 				<div class="mySlides fade">
 					<div class="numbertext">3 / 4</div>
 					<img
-						src="./dist/img/offerC.jpg"
+						src="/dist/img/offerC.jpg"
 						style="width: 100%"
 						alt="Drewniany domek przy drodze prowadzącej w głąb iglastego lasu."
 					/>
@@ -120,7 +120,7 @@
 				<div class="mySlides fade">
 					<div class="numbertext">4 / 4</div>
 					<img
-						src="./dist/img/offerD.jpg"
+						src="/dist/img/offerD.jpg"
 						style="width: 100%"
 						alt="Asfaltowa droga wzdłuż której biegnie las. W lesie i na drzewach leży śnieg."
 					/>
@@ -184,7 +184,7 @@
 	</div>
 </footer>
 
-		<script src="./dist/js/slideshow.min.js"></script>
-		<script src="./dist/js/script.min.js"></script>
+		<script src="/dist/js/slideshow.min.js"></script>
+		<script src="/dist/js/script.min.js"></script>
 	</body>
 </html>
