--- a/kontakt.html
+++ b/kontakt.html
@@ -10,6 +10,7 @@
 		/>
 		<meta name="author" content="Tomasz Jachno" />
 		<meta name="copyright" content="Forest Group Company Ltd." />
+		<meta name="robots" content="noindex" />
 		<title>Forest Group - Kraków - Skontaktuj się z nami!</title>
 
 		<link
