--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		/>
 		<meta name="author" content="Tomasz Jachno" />
 		<meta name="copyright" content="Forest Group Company Ltd." />
+		<meta name="robots" content="noindex" />
 		<title>Forest Group - Kraków - Najpiękniejszy park w Twojej okolicy!</title>
 
 		<link
@@ -28,11 +29,9 @@
 			<nav class="nav-desktop nav-sticky wrapper">
 	<div class="logo"><i class="fa-solid fa-tree"></i>Forest</div>
 	<div class="nav__list--desktop">
-		<a href="/index.html#home" class="nav__link--desktop">Home</a>
-		<a href="/index.html#aboutus" class="nav__link--desktop">O nas</a>
-		<a href="/index.html#offer" class="nav__link--desktop nav__link--last"
-			>Oferta</a
-		>
+		<a href="#home" class="nav__link--desktop">Home</a>
+		<a href="#aboutus" class="nav__link--desktop">O nas</a>
+		<a href="#offer" class="nav__link--desktop nav__link--last">Oferta</a>
 		<a href="/kontakt.html" class="nav__link--desktop">Kontakt</a>
 	</div>
 </nav>
@@ -41,15 +40,9 @@
 		<button class="nav__button"><i class="fa-solid fa-bars"></i></button>
 		<div class="logo"><i class="fa-solid fa-tree"></i>Forest</div>
 		<div class="nav__list--mobile">
-			<a href="/index.html#home" class="nav__link--mobile" onclick="void(0)"
-				>Home</a
-			>
-			<a href="/index.html#aboutus" class="nav__link--mobile" onclick="void(0)"
-				>O nas</a
-			>
-			<a href="/index.html#offer" class="nav__link--mobile" onclick="void(0)"
-				>Oferta</a
-			>
+			<a href="#home" class="nav__link--mobile" onclick="void(0)">Home</a>
+			<a href="#aboutus" class="nav__link--mobile" onclick="void(0)">O nas</a>
+			<a href="#offer" class="nav__link--mobile" onclick="void(0)">Oferta</a>
 			<a href="/kontakt.html" class="nav__link--mobile" onclick="void(0)"
 				>Kontakt</a
 			>
