--- a/oferty.html
+++ b/oferty.html
@@ -10,6 +10,7 @@
 		/>
 		<meta name="author" content="Tomasz Jachno" />
 		<meta name="copyright" content="Forest Group Company Ltd." />
+		<meta name="robots" content="noindex">
 		<title>Forest Group - Kraków - Oferta firmy!</title>
 
 		<link
